--- a/apps/offlegacy.org/app/globals.css
+++ b/apps/offlegacy.org/app/globals.css
@@ -1,10 +1,3 @@
-body {
-  color: white;
-  background: black;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
